fix(services.less): default sections to collapsed

--- a/styles/services.less
+++ b/styles/services.less
@@ -64,6 +64,7 @@
         margin: @default-spacing auto;
         max-width: 960px;
         color: @off-white;
+        display: none;
 
         li {
             list-style: none;
